--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,11 @@ body {
   margin: 0;
   padding-top: 80px; /* Ajusta esto a la altura de tu header */
 }
-
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 header {
   background-color: #4B0082; /* Morado oscuro */
   color: #D8BFD8; /* Morado claro */
@@ -29,6 +33,7 @@ header {
 .navigation {
   display: flex;
   gap: 20px;
+  padding-right: 30px;
 }
 
 .navigation a {
@@ -82,11 +87,14 @@ header {
   display: flex;
   flex-direction: row; /* Alinea los elementos en una fila */
   align-items: center; /* Alinea verticalmente los elementos */
+  justify-content: center; /* Centra horizontalmente */
   padding: 30px;
   margin: 40px 0;
   background-color: #f9f9f9; /* Color de fondo */
   border-radius: 10px; /* Esquinas redondeadas */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  max-width: 1000px;
+  margin: 0 auto; /* Centra horizontalmente */
 }
 
 .text-content {
@@ -347,13 +355,20 @@ ul li a:hover {
     flex-direction: column;
     align-items: flex-start;
     margin-right: 20px;
+    z-index: 100;
   }
 
   .navigation {
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background: #4B0082;
     width: 100%;
+    flex-direction: column;
   }
 
   .navigation a {
