--- a/pestañas-legales/aviso-legal.css
+++ b/pestañas-legales/aviso-legal.css
@@ -4,7 +4,11 @@ body {
     margin: 0;
     padding-top: 80px; /* Ajusta esto a la altura de tu header */
   }
-  
+  html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
   header {
     background-color: #4B0082; /* Morado oscuro */
     color: #D8BFD8; /* Morado claro */
@@ -29,6 +33,7 @@ body {
   .navigation {
     display: flex;
     gap: 20px;
+    padding-right: 30px;
   }
   
   .navigation a {
@@ -50,6 +55,9 @@ body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+section h1{
+  color: #ecf0f1;
+} 
 section h2 {
     font-size: 24px;
     margin-bottom: 10px;
@@ -173,13 +181,20 @@ section a:hover {
       flex-direction: column;
       align-items: flex-start;
       margin-right: 20px;
+      z-index: 100;
     }
   
     .navigation {
-      display: none;
-      flex-direction: column;
-      align-items: flex-start;
+      display: flex;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      background: #4B0082;
       width: 100%;
+      flex-direction: column;
     }
   
     .navigation a {
