--- a/pestañas-legales/politica-de-privacidad.css
+++ b/pestañas-legales/politica-de-privacidad.css
@@ -4,6 +4,11 @@ body {
     margin: 0;
     padding-top: 80px; /* Ajusta esto a la altura de tu header */
   }
+  html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
   
   header {
     background-color: #4B0082; /* Morado oscuro */
@@ -29,6 +34,7 @@ body {
   .navigation {
     display: flex;
     gap: 20px;
+    padding-right: 30px;
   }
   
   .navigation a {
@@ -165,13 +171,20 @@ section a:hover {
       flex-direction: column;
       align-items: flex-start;
       margin-right: 20px;
+      z-index: 100;
     }
   
     .navigation {
-      display: none;
-      flex-direction: column;
-      align-items: flex-start;
+      display: flex;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      background: #4B0082;
       width: 100%;
+      flex-direction: column;
     }
   
     .navigation a {
