--- a/quienes-somos/queSomos.css
+++ b/quienes-somos/queSomos.css
@@ -35,6 +35,7 @@ body {
   .navigation {
     display: flex;
     gap: 20px;
+    padding-right: 30px;
   }
   
   .navigation a {
@@ -144,13 +145,20 @@ body {
       flex-direction: column;
       align-items: flex-start;
       margin-right: 20px;
+      z-index: 100;
     }
   
     .navigation {
-      display: none;
-      flex-direction: column;
-      align-items: flex-start;
+      display: flex;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      background: #4B0082;
       width: 100%;
+      flex-direction: column;
     }
   
     .navigation a {
