--- a/signup/signup.css
+++ b/signup/signup.css
@@ -36,6 +36,8 @@ header {
 .navigation {
   display: flex;
   gap: 20px;
+  padding-right: 30px;
+
 }
 
 .navigation a {
@@ -273,13 +275,20 @@ ul li a:hover {
     flex-direction: column;
     align-items: flex-start;
     margin-right: 20px;
+    z-index: 100;
   }
 
   .navigation {
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background: #4B0082;
     width: 100%;
+    flex-direction: column;
   }
 
   .navigation a {
