--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -26,6 +26,7 @@ body {
   #admin-icon {
     margin-right: 20px;
     cursor: pointer;
+    color: #fff;
   }
   
   #admin-menu {
@@ -138,4 +139,18 @@ body {
     border-radius: 5px;
   }
   
+  .delete-image-icon {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    color: red;
+  }
+  
+  .image-wrapper {
+    position: relative;
+    display: inline-block;
+    margin: 5px;
+  }
   
